gccida/c1/make_decl_rtl
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_decl_rtl/src/varasm.c:1300:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *identifier; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_decl_rtl/src/varasm.c:1302:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_decl_rtl/src/varasm.c:1341:43: error: use of undeclared identifier 'machine_mode'
decl->decl.rtl = adjust_address_1( rtl, ( machine_mode)LOBYTE( decl->block.supercontext), 0LL, 0, 1); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_decl_rtl/src/varasm.c:1377:37: error: use of undeclared identifier 'machine_mode'
if ( ix86_hard_regno_mode_ok( v9, ( machine_mode)v11) ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_decl_rtl/src/varasm.c:1388:30: error: use of undeclared identifier 'machine_mode'
v14 = gen_rtx_fmt_i0( REG, ( machine_mode)LOBYTE( decl->block.supercontext), reg_number); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_decl_rtl/src/varasm.c:1409:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = ( ( unsigned int)( mode_class_0[supercontext_low] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_decl_rtl/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_decl_rtl/src/varasm.c:1494:36: error: use of undeclared identifier 'machine_mode'
v27 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), low); 
                                   ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_decl_rtl/src/obj/varasm.o] Error 1
